diesel_compile_tests/tests/fail/filter_requires_bool_nonaggregate_expression.stderr
error[E0277]: `diesel::sql_types::Text` is neither `diesel::sql_types::Bool` nor `diesel::sql_types::Nullable<Bool>`
  --> tests/fail/filter_requires_bool_nonaggregate_expression.rs:15:33
   |
15 |     let _ = users::table.filter(users::name);
   |                          ------ ^^^^^^^^^^^ the trait `BoolOrNullableBool` is not implemented for `diesel::sql_types::Text`, which is required by `users::table: FilterDsl<_>`
   |                          |
   |                          required by a bound introduced by this call
   |
   = note: try to provide an expression that produces one of the expected sql types
   = help: the following other types implement trait `BoolOrNullableBool`:
             Bool
             Nullable<Bool>
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `FilterDsl<columns::name>`
   = note: 1 redundant requirement hidden
   = note: required for `users::table` to implement `FilterDsl<columns::name>`
note: required by a bound in `diesel::QueryDsl::filter`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn filter<Predicate>(self, predicate: Predicate) -> Filter<Self, Predicate>
   |        ------ required by a bound in this associated function
   |     where
   |         Self: methods::FilterDsl<Predicate>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::filter`

error[E0277]: the trait bound `diesel::expression::is_aggregate::Yes: MixedAggregates<diesel::expression::is_aggregate::No>` is not satisfied
  --> tests/fail/filter_requires_bool_nonaggregate_expression.rs:16:26
   |
16 |     let _ = users::table.filter(sum(users::id).eq(1));
   |                          ^^^^^^ the trait `MixedAggregates<diesel::expression::is_aggregate::No>` is not implemented for `diesel::expression::is_aggregate::Yes`, which is required by `SelectStatement<FromClause<users::table>>: FilterDsl<_>`
   |
   = help: the following other types implement trait `MixedAggregates<Other>`:
             <diesel::expression::is_aggregate::Yes as MixedAggregates<diesel::expression::is_aggregate::Yes>>
             <diesel::expression::is_aggregate::Yes as MixedAggregates<diesel::expression::is_aggregate::Never>>
   = note: required for `Grouped<Eq<sum<Integer, id>, Bound<Nullable<BigInt>, i64>>>` to implement `NonAggregate`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `FilterDsl<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<diesel::expression::functions::aggregate_folding::sum_utils::sum<diesel::sql_types::Integer, columns::id>, diesel::expression::bound::Bound<Nullable<BigInt>, i64>>>>`
   = note: consider using `--verbose` to print the full type name to the console
